@@ -14,6 +14,9 @@
 - m2urllib did not close sockets properly, fix by Miloslav Trmac
 - Fixed httpslib to send only the path+query+fragment part of the URL when
   using CONNECT proxy, by James Bowes  
+- SSLServer.__init__ now takes optional bind_and_activate parameter and
+  initializes by calling SocketServer.BaseServer.__init__, which
+  are Python 2.6 compatibility fixes, by Christian
 - Reverted a change done in 0.17 to m2urllib2 which changed urls to include
   host when it should stay as it was
 - SMIME.text_crlf and text_crlf_bio were always raising TypeError; fixed
